--- a/cron/package.json
+++ b/cron/package.json
@@ -6,8 +6,7 @@
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
     "lint": "eslint .",
-    "lint-fix": "eslint . --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint-fix": "eslint . --fix"
   },
   "dependencies": {
     "config": "^4.1.1",
