--- a/cron/package.json
+++ b/cron/package.json
@@ -6,7 +6,8 @@
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
     "lint": "eslint .",
-    "lint-fix": "eslint . --fix"
+    "lint-fix": "eslint . --fix",
+    "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
     "config": "^4.1.1",
