--- a/cron/package.json
+++ b/cron/package.json
@@ -7,7 +7,7 @@
     "dev": "ts-node src/index.ts",
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
     "config": "^4.1.1",
