--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -132,10 +132,7 @@ jobs:
         run: npm run build
 
       - name: Run unit tests
-        run: |
-          echo "TODO: Implement client unit tests"
-          echo "TODO: Add Jest or Vitest configuration for React components"
-          echo "TODO: Add test coverage reporting"
+        run: npm run test
 
       - name: Bundle size analysis
         run: |
@@ -309,7 +306,7 @@ jobs:
           if [[ "${{ needs.validate-client.result }}" == "failure" ]] || \
              [[ "${{ needs.validate-server.result }}" == "failure" ]] || \
              [[ "${{ needs.validate-cron.result }}" == "failure" ]] || \
-             [[ "${{ needs.validate-scripts.result }}" == "failure" ]] || \
+             [[ "${{ needs.validate-scripts.result }}" == "failure" ]]; then
             echo "❌ One or more validations failed"
             exit 1
           else
