--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -23,5 +23,9 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "include": [
+    "src",
+    "test",
+    "node_modules/vitest/globals.d.ts"
+  ]
 }
