--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "build:analyze": "tsc -b && vite build --mode analyze",
+    "bundle-size": "node scripts/analyze-bundle.js",
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
     "preview": "vite preview",
@@ -45,6 +47,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
     "jsdom": "^27.0.0",
+    "rollup-plugin-visualizer": "^5.12.0",
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.43.0",
     "vite": "^7.1.5",
