fix(ci): Update default Node.js version to v22.16.0 across workflows

--- a/.github/workflows/validate-cron.yml
+++ b/.github/workflows/validate-cron.yml
@@ -12,7 +12,7 @@ on:
         description: 'Node.js version to use'
         required: false
         type: string
-        default: '20'
+        default: 'v22.16.0'
 
 jobs:
   validate-cron:
