--- a/.github/workflows/validate-server.yml
+++ b/.github/workflows/validate-server.yml
@@ -12,7 +12,7 @@ on:
         description: 'Node.js version to use'
         required: false
         type: string
-        default: '22.16.0'
+        default: 'v22.16.0'
 
 jobs:
   validate-server:
