refactor(ci): Simplify setup-validation action and update Node.js version to v22.16.0

--- a/.github/workflows/basic-validation.yml
+++ b/.github/workflows/basic-validation.yml
@@ -43,6 +43,11 @@ jobs:
       scripts-changed: ${{ steps.changes.outputs.scripts }}
       github-changed: ${{ steps.changes.outputs.github }}
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v5
+        with:
+          fetch-depth: 0
+
       - name: Setup validation environment
         uses: ./.github/actions/setup-validation
 
