--- a/.github/actions/setup-validation/action.yml
+++ b/.github/actions/setup-validation/action.yml
@@ -1,10 +1,6 @@
 name: 'Setup Validation Environment'
 description: 'Setup common validation tools and environment'
 inputs:
-  fetch-depth:
-    description: 'Git fetch depth'
-    required: false
-    default: '0'
   install-commitlint:
     description: 'Whether to install commitlint'
     required: false
@@ -13,16 +9,11 @@ inputs:
 runs:
   using: 'composite'
   steps:
-    - name: Checkout code
-      uses: actions/checkout@v5
-      with:
-        fetch-depth: ${{ inputs.fetch-depth }}
-
     - name: Setup Node.js for validation tools
       if: inputs.install-commitlint == 'true'
       uses: actions/setup-node@v4
       with:
-        node-version: lts/*
+        node-version: v22.16.0
 
     - name: Install commitlint
       if: inputs.install-commitlint == 'true'
