--- a/.github/workflows/jobs/validate-server.yml
+++ b/.github/workflows/jobs/validate-server.yml
@@ -57,19 +57,19 @@ jobs:
       - name: Test database migrations
         env:
           NODE_ENV: test
-          DB_HOST: localhost
-          DB_PORT: 3306
-          DB_USER: root
-          DB_PASSWORD: test_password
-          DB_NAME: test_db
+          MYSQL_HOST: localhost
+          MYSQL_PORT: 3306
+          MYSQL_USER: root
+          MYSQL_PASSWORD: test_password
+          MYSQL_DATABASE: test_db
         run: npm run migrate
 
       - name: Run unit tests
         env:
           NODE_ENV: test
-          DB_HOST: localhost
-          DB_PORT: 3306
-          DB_USER: root
-          DB_PASSWORD: test_password
-          DB_NAME: test_db
+          MYSQL_HOST: localhost
+          MYSQL_PORT: 3306
+          MYSQL_USER: root
+          MYSQL_PASSWORD: test_password
+          MYSQL_DATABASE: test_db
         run: npm test
