--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -12,7 +12,7 @@ concurrency:
 
 permissions:
   contents: read
-  pull-requests: read
+  pull-requests: write
 
 jobs:
   # Job 1: Basic validation and setup
@@ -24,6 +24,7 @@ jobs:
       pr-title: ${{ github.event.pull_request.title }}
       base-sha: ${{ github.event.pull_request.base.sha }}
       head-sha: ${{ github.event.pull_request.head.sha }}
+      pr-number: ${{ github.event.pull_request.number }}
 
   # Job 2: Client validation
   validate-client:
@@ -53,11 +54,37 @@ jobs:
     if: needs.basic-validation.outputs.scripts-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true'
     uses: ./.github/workflows/validate-scripts.yml
 
-  # Job 6: Final validation and summary
+  # Job 6: Integration testing
+  integration-testing:
+    name: Integration Testing
+    runs-on: ubuntu-latest
+    needs: [ validate-client, validate-server, validate-cron, validate-scripts ]
+    if: always() && (needs.validate-client.result == 'success' || needs.validate-server.result == 'success' || needs.validate-cron.result == 'success' || needs.validate-scripts.result == 'success')
+    steps:
+      - name: Run integration tests
+        run: |
+          echo "=== Integration Testing ==="
+          echo "Running integration tests..."
+          echo "TODO: Implement integration testing"
+
+  # Job 7: E2E testing
+  e2e-testing:
+    name: E2E Testing
+    runs-on: ubuntu-latest
+    needs: [ integration-testing ]
+    if: needs.integration-testing.result == 'success'
+    steps:
+      - name: Run E2E tests
+        run: |
+          echo "=== E2E Testing ==="
+          echo "Running end-to-end tests..."
+          echo "TODO: Implement E2E testing"
+
+  # Job 8: Final validation and summary
   validation-summary:
     name: Validation Summary
     runs-on: ubuntu-latest
-    needs: [ basic-validation, validate-client, validate-server, validate-cron, validate-scripts ]
+    needs: [ basic-validation, validate-client, validate-server, validate-cron, validate-scripts, integration-testing, e2e-testing ]
     if: always()
     steps:
       - name: Check all validations
@@ -68,22 +95,48 @@ jobs:
           echo "Server validation: ${{ needs.validate-server.result }}"
           echo "Cron validation: ${{ needs.validate-cron.result }}"
           echo "Scripts validation: ${{ needs.validate-scripts.result }}"
+          echo "Integration testing: ${{ needs.integration-testing.result }}"
+          echo "E2E testing: ${{ needs.e2e-testing.result }}"
 
           # Fail if any required job failed
           if [[ "${{ needs.basic-validation.result }}" == "failure" ]] || \
              [[ "${{ needs.validate-client.result }}" == "failure" ]] || \
              [[ "${{ needs.validate-server.result }}" == "failure" ]] || \
              [[ "${{ needs.validate-cron.result }}" == "failure" ]] || \
-             [[ "${{ needs.validate-scripts.result }}" == "failure" ]]; then
+             [[ "${{ needs.validate-scripts.result }}" == "failure" ]] || \
+             [[ "${{ needs.integration-testing.result }}" == "failure" ]] || \
+             [[ "${{ needs.e2e-testing.result }}" == "failure" ]]; then
             echo "❌ One or more validations failed"
             exit 1
           else
             echo "✅ All validations passed"
           fi
 
+      - name: Checkout repository
+        if: always()
+        uses: actions/checkout@v4
+
       - name: Comment on PR
         if: always()
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_REPOSITORY: ${{ github.repository }}
+          PR_NUMBER: ${{ github.event.pull_request.number }}
+          GITHUB_SERVER_URL: ${{ github.server_url }}
+          GITHUB_RUN_ID: ${{ github.run_id }}
         run: |
-          echo "TODO: Implement PR commenting"
-          echo "TODO: Post validation results as PR comment"
-          echo "TODO: Include links to failed checks and suggestions"
+          # Generate the summary message
+          echo "=== Generating PR Summary ==="
+          SUMMARY_MESSAGE=$(bash ${{ github.workspace }}/scripts/ci/generate-pr-summary.sh \
+            "${{ needs.basic-validation.result }}" \
+            "${{ needs.validate-client.result }}" \
+            "${{ needs.validate-server.result }}" \
+            "${{ needs.validate-cron.result }}" \
+            "${{ needs.validate-scripts.result }}" \
+            "${{ needs.integration-testing.result }}" \
+            "${{ needs.e2e-testing.result }}")
+
+          # Post/update the comment
+          echo "=== Posting PR Comment ==="
+          COMMENT_ID="pull-request-validation-summary"
+          bash ${{ github.workspace }}/scripts/ci/pr-comment.sh "$COMMENT_ID" "$SUMMARY_MESSAGE"
